--- a/scss/style/menus/dashboard.scss
+++ b/scss/style/menus/dashboard.scss
@@ -41,16 +41,16 @@
         }
     }
 
-    .power-menu-container {
-        margin-left: 0em;
+  .power-menu-container {
+    margin-bottom: 0.65em;
 
         .dashboard-button {
             min-width: 3em;
             min-height: 2.5em;
 
-            &:not(:last-child) {
-                margin-bottom: 0.75em;
-            }
+      &:not(:last-child) {
+        margin-right: 1em;
+      }
 
             label {
                 color: if($bar-menus-monochrome, $bar-menus-buttons-text, $bar-menus-menu-dashboard-shortcuts-text);
@@ -96,6 +96,16 @@
                     $bar-menus-menu-dashboard-powermenu-sleep
                 );
             }
+      &.sleep {
+        background: if($bar-menus-monochrome, $bar-menus-buttons-default, $bar-menus-menu-dashboard-powermenu-sleep);
+      }
+
+      &.caffeine {
+        background: if($bar-menus-monochrome, $bar-menus-buttons-default, $bar-menus-menu-dashboard-powermenu-caffeine);
+        label {
+          font-size: 1.3em;
+        }
+      }
 
             &:hover {
                 &.shutdown {
@@ -131,19 +141,18 @@
                     );
                 }
 
-                &.sleep {
-                    background: transparentize(
-                        if(
-                            $bar-menus-monochrome,
-                            $bar-menus-buttons-default,
-                            $bar-menus-menu-dashboard-powermenu-sleep
-                        ),
-                        0.5
-                    );
-                }
-            }
+        &.sleep {
+          background: transparentize(if($bar-menus-monochrome, $bar-menus-buttons-default, $bar-menus-menu-dashboard-powermenu-sleep), 0.5);
         }
+
+        &.caffeine {
+          background: transparentize(if($bar-menus-monochrome, $bar-menus-buttons-default, $bar-menus-menu-dashboard-powermenu-caffeine), 0.5);
+        }
+      }
+
+
     }
+  }
 
     .shortcuts-container {
         font-size: 1em;
